--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+.App{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  transition: background-color 0.5s;
 }
 
-.App-link {
-  color: #61dafb;
+.big-rounded-box {
+  border-radius: 20px;
+  background-color: white;
+  padding: 100px;
+  transition: background-color 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.color-squares-visible {
+  background-color: #F0F0F0; 
+}
+
+h1 {
+  padding-top: 10px;
+}
+
+.color-square {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  cursor: pointer;
+  border: 1.5px solid black;
+  border-radius: 10px; 
+}
+
+.color-squares {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+button {
+  margin-top: 20px;
+  font-size: 18px;
 }
